--- a/rpa-certificates-of-free-sale/Logic Workflows/Proxy Main.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/Proxy Main.xaml
@@ -179,7 +179,7 @@
                           <av:PointCollection x:Key="ConnectorLocation">520,415.02 520,476.5</av:PointCollection>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
-                      <TryCatch DisplayName="Try Config Reader" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+                      <TryCatch DisplayName="Try Config Reader" sap:VirtualizedContainerService.HintSize="438,606" sap2010:WorkflowViewState.IdRef="TryCatch_1">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -195,7 +195,7 @@
                             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Config Reader" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Logic Workflows\Start Up\Config Reader.xaml">
                               <ui:InvokeWorkflowFile.Arguments>
                                 <InArgument x:TypeArguments="x:String" x:Key="IN_strConfigPath">
-                                  <Literal x:TypeArguments="x:String">Documents\config.xlsx</Literal>
+                                  <Literal x:TypeArguments="x:String">Documents\LiveConfig.xlsx</Literal>
                                 </InArgument>
                                 <OutArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="OUT_dictConfig">
                                   <mva:VisualBasicReference x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="dictConfig" />
@@ -712,27 +712,13 @@
                                                                                 </Assign>
                                                                                 <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Complete CRM Application" sap:VirtualizedContainerService.HintSize="379,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_8" UnSafe="False" WorkflowFileName="Data Workflows\TraderCRM\CompleteCRMApplication.xaml">
                                                                                   <ui:InvokeWorkflowFile.Arguments>
-                                                                                    <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserCRM">
-                                                                                      <mva:VisualBasicValue x:TypeArguments="ui:Browser" ExpressionText="browserCRM" />
-                                                                                    </InArgument>
-                                                                                    <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
-                                                                                      <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="dictConfig" />
-                                                                                    </InArgument>
-                                                                                    <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertificateCounter">
-                                                                                      <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="intCertificateCounter" />
-                                                                                    </InArgument>
-                                                                                    <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">
-                                                                                      <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strFlow" />
-                                                                                    </OutArgument>
-                                                                                    <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">
-                                                                                      <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="strReasonForStop" />
-                                                                                    </OutArgument>
-                                                                                    <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertsRequested">
-                                                                                      <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="intCertsRequested" />
-                                                                                    </InArgument>
-                                                                                    <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertCopies">
-                                                                                      <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="intCertCopies" />
-                                                                                    </InArgument>
+                                                                                    <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserCRM">[browserCRM]</InArgument>
+                                                                                    <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[dictConfig]</InArgument>
+                                                                                    <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertificateCounter">[intCertificateCounter]</InArgument>
+                                                                                    <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">[OUT_strFlow]</OutArgument>
+                                                                                    <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">[strReasonForStop]</OutArgument>
+                                                                                    <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertsRequested">[intCertsRequested]</InArgument>
+                                                                                    <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertCopies">[intCertCopies]</InArgument>
                                                                                   </ui:InvokeWorkflowFile.Arguments>
                                                                                 </ui:InvokeWorkflowFile>
                                                                                 <Assign DisplayName="Assign Child Case Counter" sap:VirtualizedContainerService.HintSize="379,60" sap2010:WorkflowViewState.IdRef="Assign_32">
@@ -1118,54 +1104,22 @@
                                                                             </Assign>
                                                                             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Process Child Case" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Logic Workflows\ProcessChildCase.xaml">
                                                                               <ui:InvokeWorkflowFile.Arguments>
-                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strCaseFilePath">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strCaseFilePath" />
-                                                                                </InArgument>
-                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strRefFolder">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strRefFolderPath" />
-                                                                                </InArgument>
-                                                                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="dictConfig" />
-                                                                                </InArgument>
-                                                                                <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="IN_dictFormFields">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:String)" ExpressionText="dictFormFields" />
-                                                                                </InArgument>
-                                                                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">
-                                                                                  <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="strReasonForStop" />
-                                                                                </OutArgument>
-                                                                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">
-                                                                                  <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strFlow" />
-                                                                                </OutArgument>
-                                                                                <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserCRM">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="ui:Browser" ExpressionText="browserCRM" />
-                                                                                </InArgument>
-                                                                                <InArgument x:TypeArguments="sd:DataTable" x:Key="IN_dtCountries">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="dtCountries" />
-                                                                                </InArgument>
-                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strReferenceNumber">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strReferenceNumber" />
-                                                                                </InArgument>
-                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strWorkingFolderPath">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strWorkingFolderPath" />
-                                                                                </InArgument>
-                                                                                <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertificateCounter">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="intCertificateCounter" />
-                                                                                </InArgument>
-                                                                                <OutArgument x:TypeArguments="x:Int32" x:Key="OUT_intCertsRequested">
-                                                                                  <mva:VisualBasicReference x:TypeArguments="x:Int32" ExpressionText="intCertsRequested" />
-                                                                                </OutArgument>
-                                                                                <OutArgument x:TypeArguments="x:Int32" x:Key="OUT_intCertificateCounter">
-                                                                                  <mva:VisualBasicReference x:TypeArguments="x:Int32" ExpressionText="intCertificateCounter" />
-                                                                                </OutArgument>
-                                                                                <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertsRequested">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="intCertsRequested" />
-                                                                                </InArgument>
-                                                                                <OutArgument x:TypeArguments="x:Int32" x:Key="OUT_intCertCopies">
-                                                                                  <mva:VisualBasicReference x:TypeArguments="x:Int32" ExpressionText="intCertCopies" />
-                                                                                </OutArgument>
-                                                                                <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertCopies">
-                                                                                  <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="intCertCopies" />
-                                                                                </InArgument>
+                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strCaseFilePath">[strCaseFilePath]</InArgument>
+                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strRefFolder">[strRefFolderPath]</InArgument>
+                                                                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[dictConfig]</InArgument>
+                                                                                <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="IN_dictFormFields">[dictFormFields]</InArgument>
+                                                                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">[strReasonForStop]</OutArgument>
+                                                                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">[OUT_strFlow]</OutArgument>
+                                                                                <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserCRM">[browserCRM]</InArgument>
+                                                                                <InArgument x:TypeArguments="sd:DataTable" x:Key="IN_dtCountries">[dtCountries]</InArgument>
+                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strReferenceNumber">[strReferenceNumber]</InArgument>
+                                                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strWorkingFolderPath">[strWorkingFolderPath]</InArgument>
+                                                                                <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertificateCounter">[intCertificateCounter]</InArgument>
+                                                                                <OutArgument x:TypeArguments="x:Int32" x:Key="OUT_intCertsRequested">[intCertsRequested]</OutArgument>
+                                                                                <OutArgument x:TypeArguments="x:Int32" x:Key="OUT_intCertificateCounter">[intCertificateCounter]</OutArgument>
+                                                                                <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertsRequested">[intCertsRequested]</InArgument>
+                                                                                <OutArgument x:TypeArguments="x:Int32" x:Key="OUT_intCertCopies">[intCertCopies]</OutArgument>
+                                                                                <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertCopies">[intCertCopies]</InArgument>
                                                                               </ui:InvokeWorkflowFile.Arguments>
                                                                             </ui:InvokeWorkflowFile>
                                                                             <Assign DisplayName="Assign retry counter" sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_15">
