--- a/rpa-certificates-of-free-sale/Data Workflows/Word/ValidateApplicationForm.xaml
+++ b/rpa-certificates-of-free-sale/Data Workflows/Word/ValidateApplicationForm.xaml
@@ -1465,10 +1465,7 @@
                                 </scg:Dictionary>
                               </sap:WorkflowViewStateService.ViewState>
                               <FlowDecision.True>
-                                <FlowDecision x:Name="__ReferenceID44" DisplayName="Part D?" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_15">
-                                  <FlowDecision.Condition>
-                                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="dictAttachmentFields(&quot;CertificateType&quot;).Equals(&quot;Non-Alcohol\MANUFACTURING and FREESALE CERT&quot;)" />
-                                  </FlowDecision.Condition>
+                                <FlowDecision x:Name="__ReferenceID44" Condition="[dictAttachmentFields(&quot;CertificateType&quot;).Equals(&quot;Non-Alcohol\MANUFACTURING and FREESALE CERT&quot;)]" DisplayName="Part D?" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_15">
                                   <sap:WorkflowViewStateService.ViewState>
                                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1690,7 +1687,7 @@
                                               <av:PointCollection x:Key="ConnectorLocation">298.895,1064 298.895,1113</av:PointCollection>
                                             </scg:Dictionary>
                                           </sap:WorkflowViewStateService.ViewState>
-                                          <Sequence DisplayName="Validate Part C and/or D" sap:VirtualizedContainerService.HintSize="526,1814" sap2010:WorkflowViewState.IdRef="Sequence_41">
+                                          <Sequence DisplayName="Validate Part C and/or D" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_41">
                                             <sap:WorkflowViewStateService.ViewState>
                                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1911,9 +1908,9 @@
                                                           <av:PointCollection x:Key="ConnectorLocation">298.895,1438 298.895,1503</av:PointCollection>
                                                         </scg:Dictionary>
                                                       </sap:WorkflowViewStateService.ViewState>
-                                                      <TryCatch DisplayName="Try Part F of Form" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_6">
+                                                      <TryCatch DisplayName="Try Part F of Form" sap:VirtualizedContainerService.HintSize="564,1457" sap2010:WorkflowViewState.IdRef="TryCatch_6">
                                                         <TryCatch.Try>
-                                                          <Sequence DisplayName="Part F of Form" sap:VirtualizedContainerService.HintSize="526,982" sap2010:WorkflowViewState.IdRef="Sequence_13">
+                                                          <Sequence DisplayName="Part F of Form" sap:VirtualizedContainerService.HintSize="526,1230" sap2010:WorkflowViewState.IdRef="Sequence_13">
                                                             <sap:WorkflowViewStateService.ViewState>
                                                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1954,6 +1951,18 @@
                                                                     </scg:Dictionary>
                                                                   </sap:WorkflowViewStateService.ViewState>
                                                                 </Throw>
+                                                              </If.Then>
+                                                            </If>
+                                                            <If Condition="[dictAttachmentFields(&quot;English&quot;).ToLower.Equals(&quot;false&quot;) and dictAttachmentFields(&quot;Spanish&quot;).ToLower.Equals(&quot;false&quot;)]" DisplayName="If neither language ticked" sap:VirtualizedContainerService.HintSize="484,208" sap2010:WorkflowViewState.IdRef="If_69">
+                                                              <If.Then>
+                                                                <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_51">
+                                                                  <Assign.To>
+                                                                    <OutArgument x:TypeArguments="x:String">[dictAttachmentFields("English")]</OutArgument>
+                                                                  </Assign.To>
+                                                                  <Assign.Value>
+                                                                    <InArgument x:TypeArguments="x:String">True</InArgument>
+                                                                  </Assign.Value>
+                                                                </Assign>
                                                               </If.Then>
                                                             </If>
                                                           </Sequence>
